aggiunto riferimento per i pro e i contro dei framework

--- a/docs/esterni/motivazione_scelte/motivazione_scelte.tex
+++ b/docs/esterni/motivazione_scelte/motivazione_scelte.tex
@@ -129,6 +129,7 @@ Mentre, scegliendo la tipizzazione dinamica, le scelte ricadrebbero su:
     \item Tipizzazione statica
 \end{itemize}
 \vspace*{0.5cm}
+\textbf{Contro:}
 \begin{itemize}
     \item Inconsistenza tra browser
     \item Tipizzazione alcune volte complessa
@@ -183,7 +184,7 @@ Escludendo \textit{HTML5}, \textit{XHTML} e \textit{CSS} che saranno di sicuro u
     \item \href{https://angularjs.org/}{Angular}
     \item \href{https://emberjs.com/}{Ember}
 \end{itemize}
-
+Per i pro e i contro dei framewor, sia frontend che backend, si rimanda il lettore a \href{https://blog.geekandjob.com/framework-javascript/}{questo link}.
 \newpage
 \section{Scelte e Motivazioni}
 [WIP]
