--- a/docs/esterni/motivazione_scelte/motivazione_scelte.tex
+++ b/docs/esterni/motivazione_scelte/motivazione_scelte.tex
@@ -184,7 +184,7 @@ Escludendo \textit{HTML5}, \textit{XHTML} e \textit{CSS} che saranno di sicuro u
     \item \href{https://angularjs.org/}{Angular}
     \item \href{https://emberjs.com/}{Ember}
 \end{itemize}
-Per i pro e i contro dei framewor, sia frontend che backend, si rimanda il lettore a \href{https://blog.geekandjob.com/framework-javascript/}{questo link}.
+Per i pro e i contro dei framework, sia frontend che backend, si rimanda il lettore a \href{https://blog.geekandjob.com/framework-javascript/}{questo link}.
 \newpage
 \section{Scelte e Motivazioni}
 [WIP]
