--- a/docs/esterni/glossario/glossario.tex
+++ b/docs/esterni/glossario/glossario.tex
@@ -8,13 +8,14 @@
 \settitolo{Glossario}
 \setprogetto{Lumos Minima}
 \setcommittenti{Imola Informatica}
-\setredattori{Soldà Matteo}
+\setredattori{Alberti Nicolas \\ Soldà Matteo}
 \setdestuso{esterno}
 \setdescrizione{
 Questo documento riporta i termini specifici del dominio per i quali viene richiesta una definizione rigorosa e univoca.
 }
-\addversione{0.0.1}{03/05/2023}{Nicolas Alberti}{Soldà Matteo}{Aggiunta parole al glossario, lettera T.}
 \addversione{0.0.0}{24/03/2023}{Soldà Matteo}{Cavaliere Erica}{Prima stesura.}
+\addversione{0.0.1}{03/05/2023}{Nicolas Alberti}{Soldà Matteo}{Aggiunta parole al glossario, lettera T.}
+\addversione{0.0.2}{10/05/2023}{Soldà Matteo}{}{Aggiunti nuovi vocaboli derivanti da \textit{Motivazione delle Scelte}}
 
 
 \begin{document}
@@ -34,12 +35,19 @@ Questo documento riporta i termini specifici del dominio per i quali viene richi
 
 \newpage
 \section{F.}
-\textbf{Fornitura:} ciascuna delle serie di prodotti necessari al completamento, al funzionamento o all'efficienza di qualcosa.
+\textbf{Fornitura:} ciascuna delle serie di prodotti necessari al completamento, al funzionamento o all'efficienza di qualcosa. \\ \\
+\textbf{Full-stack:} insieme di un sistema o di applicazione informatica, comprendente sia il frontend che il backend.\\ \\
 
 \newpage
 \section{I.}
+\textbf{IoT}: \textit{Internet of Things}, descrive la rete di oggetti fisici che hanno sensori, software e altre tecnologie integrate allo scopo di connettere e scambiare dati con altri dispositivi e sistemi tramite internet. \\ \\
 \textbf{Implementazione:} realizzazione concreta di una procedura a partire dalla sua definizione logica. \\ \\
 \textbf{Interfaccia:} dispositivo di collegamento con cui un software assicura la comunicazione tra due sistemi altrimenti incompatibili, oppure tra unità centrali e periferiche. \\ \\
+
+\newpage
+\section{M.}
+\textbf{Multithreading:} tecnicna utilizzata nella programmazione per consentire a un singolo processo di avere più \textit{thread\textsubscript{G}} di esecuzione. Ogni thread può funzionare in modo indipendente e parallelo, consentendo un uso più efficiente delle risorse. Ciò può aiutare a migliorare le prestazioni complessive di un programma e renderlo più sensibile all'input di un utente. \\ \\
+
 \newpage
 \section{P.}
 \textbf{Piano di Progetto:} calendario di massima di un progetto riportante la stima dei costi di realizzazione, dei rischi attesi e della loro mitigazione e infine della suddivisione del lavoro in molteplici periodi successivi. Per ogni periodo devono essere riportati i seguenti elementi: obiettivi attesi, obiettivi raggiunti, rischi occorsi, conseguenze e mitigazione, costi osservati e aggiornamento del calendario futuro e della stima dei costi finali. \\ \\
@@ -48,17 +56,18 @@ Questo documento riporta i termini specifici del dominio per i quali viene richi
 
 \newpage
 \section{T.}
+\textbf{Thread:} suddivisione di un processo in più istanze o sottoprocessi che vengono eseguiti concorrentemente da un sistema di elaborazione. \\ \\
 \textbf{Ticket:} è l'astrazione presente in GitHub Issues con cui si rappresenta
 un'attività di progetto: le attività sono solitamente atomiche e completabili in
 un periodo di tempo limitato. Ad ogni ticket si può associare o creare un branch
-nella repository del progetto.\\
+nella repository del progetto.\\ \\
 % TODO: Controllare se nelle Norme di Progetto sono presenti le parole "Branch" e "Repository".
 \textbf{Ticketing:} è il metodo con cui si rappresentano tutte le attività di
 progetto: è composto di più \textit{ticket\textsubscript{G}}, che permettono una visualizzazione rapida ed
-efficace di ogni incarico effettuato dai membri del gruppo. \\
+efficace di ogni incarico effettuato dai membri del gruppo. \\ \\
 \newpage
 \section{V.}
-\textbf{Versionamento:} tracciamento di un determinato stato di un software nel tempo. \\
+\textbf{Versionamento:} tracciamento di un determinato stato di un software nel tempo. \\ \\
 
 \newpage
 \section{W.}
