--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -22,6 +22,7 @@ Questo documento serve a tracciare l'efficienza del progetto. Tiene traccia dei 
 \addversione{0.0.1}{22/04/2023}{Erica Cavaliere}{Alberti Nicolas}{Stesura iniziale}
 \addversione{0.0.2}{24/04/2023}{Erica Cavaliere}{Soldà Matteo}{Correzione errori e aggiunta delle intestazioni e dei piè di pagina}
 \addversione{0.0.3}{26/04/2023}{Erica Cavaliere}{Brotto Romina}{Inserimento interruzioni di pagina e completamento grafico di Gantt}
+\addversione{0.0.4}{11/05/2023}{Erica Cavaliere}{ }{Inserimento degli sprint e aggiornamento dei grafici di Gantt}
 
 \def\pgfcalendarmonthitname#1{%
 \ifcase#1 \or Gennaio\or Febbraio\or Marzo\or Aprile\or Maggio\or Giugno\or Luglio\or Agosto\or Settembre\or Ottobre\or Novembre\or Dicembre\fi%
@@ -47,10 +48,61 @@ Durante lo svolgimento del progetto, è possibile andare incontro a dei problemi
 \newpage
 \section{Pianificazione del lavoro}
 
-\paragraph{Grafico di Gantt}
+\subsection{Lavoro svolto}
+%Di seguito sono riportati i grafici aggiornati del lavoro pianificato.\newline
+%Se si desidera vedere l'evoluzione degli impegni presi in un arco temporale preciso, lo si può vedere nella sezione \ref{Scrum}.\newline
 
-\includegraphics[scale=0.24]{grafico_gantt.png}
+
+
+\begin{itemize}
+    \item Way of Working\newline
+    \includegraphics[scale=0.24]{WoW_2.png}\newline
+    \item Requirements and Technology Baseline\newline
+    \includegraphics[scale=0.24]{RTB_2.png}\newline
+\end{itemize}
+
+\subsection{Scrum}\label{Scrum}
+
+\subsubsection{Sprint 1}
+\textbf{Data di inizio:} 14/04/2023\newline
+\textbf{Data di fine:} 27/04/2023\newline
+\newline
+\textbf{Suddivisione del lavoro:}
+\begin{itemize}
+    \item Aggiornamento delle norme di progetto
+    \item Stesura del piano di progetto
+    \item Stesura del piano di qualifica
+\end{itemize}
+\includegraphics[scale=0.24]{WoW_1.png}
+
+\subsubsection{Sprint 2}
+\textbf{Data di inizio:} 28/04/2023\newline
+\textbf{Data di fine:} 08/05/2023\newline
+\newline
+\textbf{Suddivisione del lavoro:}
+\begin{itemize}
+    \item Aggiornamento delle Norme di Progetto inserendo la gestione dei processi e il ticketing
+    \item Creare una prima stesura dell'Analisi dei Requisiti
+    \item Preparare una base delle Use Case da inserire nell'Analisi dei Requisiti
+    \item Stesura di un Glossario
+\end{itemize}
+\includegraphics[scale=0.24]{RTB_1.png}
+
+\subsubsection{Sprint 3}
+\textbf{Data di inizio:} 09/05/2023\newline
+\textbf{Data di fine:} \newline
+\newline
+\textbf{Suddivisione del lavoro:}
+\begin{itemize}
+    \item Aggiornamento dell'Analisi dei Requisiti inserendo vincoli, riferimenti normativi, riferimenti informativi e una tabella dei requisiti
+    \item Aggiornamento delle Norme di Progetto inserendo una sequenza chiara per la gestione dei commit
+    \item Fare uno confronto dei possibili linguaggi che si andranno poi ad utilizzare nel progetto
+\end{itemize}
+\includegraphics[scale=0.24]{RTB_2.png}
+
+
 \newpage
+
 \section{Preventivo delle ore e dei costi}
 
 \subsection{Suddivisione delle ore previste}
