Aggiunto difficoltà e suddivisione dei ruoli

--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -69,11 +69,35 @@ Durante lo svolgimento del progetto, è possibile andare incontro a dei problemi
 \newline
 \textbf{Suddivisione del lavoro:}
 \begin{itemize}
-    \item Aggiornamento delle norme di progetto
-    \item Stesura del piano di progetto
-    \item Stesura del piano di qualifica
+    \item Aggiornamento delle norme di progetto;
+    \item Stesura del piano di progetto;
+    \item Stesura del piano di qualifica.
 \end{itemize}
-\includegraphics[scale=0.24]{WoW_1.png}
+\textbf{Difficoltà incontrate:}
+\begin{itemize}
+    \item Problemi a suddividere i ruoli e assegnare i compiti.
+\end{itemize}
+\includegraphics[scale=0.24]{WoW_1.png}\newline
+\newline
+\begin{tabular}{|c|c|c|c|c|c|c|c|}
+    \hline
+    \textbf{ORE} & \textbf{Respon.} & \textbf{Amministr.} & \textbf{Analista} & \textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} & \textbf{Totale}\\
+    \hline
+    Erica & & & 1 & & & & 1\\
+    \hline
+    Francesco & & 1 & & & & & 1\\
+    \hline
+    Lorenzo & & & 1 & & & & 1\\
+    \hline
+    Matteo & 2 & & & & & & 2\\
+    \hline
+    Nicolas & & 1.30 & & & & & 1.30\\
+    \hline
+    Romina & & & & & & 1 & 1\\
+    \hline
+    \textbf{Totale} & 2 & 2.30 & 2 & 0 & 0 & 1 & 7.30\\
+    \hline
+\end{tabular}\\[8pt]
 
 \subsubsection{Sprint 2}
 \textbf{Data di inizio:} 28/04/2023\newline
@@ -81,24 +105,75 @@ Durante lo svolgimento del progetto, è possibile andare incontro a dei problemi
 \newline
 \textbf{Suddivisione del lavoro:}
 \begin{itemize}
-    \item Aggiornamento delle Norme di Progetto inserendo la gestione dei processi e il ticketing
-    \item Creare una prima stesura dell'Analisi dei Requisiti
-    \item Preparare una base delle Use Case da inserire nell'Analisi dei Requisiti
-    \item Stesura di un Glossario
+    \item Aggiornamento delle Norme di Progetto inserendo la gestione dei processi e il ticketing;
+    \item Creare una prima stesura dell'Analisi dei Requisiti;
+    \item Preparare una base delle Use Case da inserire nell'Analisi dei Requisiti;
+    \item Stesura di un Glossario.
 \end{itemize}
-\includegraphics[scale=0.24]{RTB_1.png}
+\textbf{Difficoltà incontrate:}
+\begin{itemize}
+    \item Iniziale difficoltà di organizzazione del lavoro;
+    \item Difficoltà nell'interpretazione di alcuni termini  del capitolato.
+\end{itemize}
+\includegraphics[scale=0.24]{RTB_1.png}\newline
+\newline
+\begin{tabular}{|c|c|c|c|c|c|c|c|}
+    \hline
+    \textbf{ORE} & \textbf{Respon.} & \textbf{Amministr.} & \textbf{Analista} & \textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} & \textbf{Totale}\\
+    \hline
+    Erica & & & 2 & & & & 2(+1)\\
+    \hline
+    Francesco & & & 2 & & & & 2(+1)\\
+    \hline
+    Lorenzo & & & & & & 2 & 2(+1)\\
+    \hline
+    Matteo & & 3 & & & & & 3(+2)\\
+    \hline
+    Nicolas & 3 & & & & & & 3(+1.30)\\
+    \hline
+    Romina & & 2 & & & & & 2(+1)\\
+    \hline
+    \textbf{Totale} & 3(+2) & 5(+2.30) & 4(+2) & 0(+0) & 0(+0) & 2(+1) & 14(+7.30)\\
+    \hline
+\end{tabular}\\[8pt]
 
 \subsubsection{Sprint 3}
 \textbf{Data di inizio:} 09/05/2023\newline
-\textbf{Data di fine:} \newline
+\textbf{Data di fine:} 19/05/2023\newline
 \newline
 \textbf{Suddivisione del lavoro:}
 \begin{itemize}
-    \item Aggiornamento dell'Analisi dei Requisiti inserendo vincoli, riferimenti normativi, riferimenti informativi e una tabella dei requisiti
-    \item Aggiornamento delle Norme di Progetto inserendo una sequenza chiara per la gestione dei commit
-    \item Fare uno confronto dei possibili linguaggi che si andranno poi ad utilizzare nel progetto
+    \item Aggiornamento dell'Analisi dei Requisiti inserendo vincoli, riferimenti normativi, riferimenti informativi e una tabella dei requisiti;
+    \item Aggiornamento delle Norme di Progetto inserendo una sequenza chiara per la gestione dei commit;
+    \item Fare uno confronto dei possibili linguaggi che si andranno poi ad utilizzare nel progetto.
 \end{itemize}
-\includegraphics[scale=0.24]{RTB_2.png}
+\textbf{Difficoltà incontrate:}
+\begin{itemize}
+    \item Gestione della repository;
+    \item Scarsa conoscenza dei comandi nel VCS;
+    \item Difficoltà nella scelta dei linguaggi framework data la poca esperienza accomulata e la grande presenza di alternative.
+\end{itemize}
+\includegraphics[scale=0.24]{RTB_2.png}\newline
+\newline
+\begin{tabular}{|c|c|c|c|c|c|c|c|}
+    \hline
+    \textbf{ORE} & \textbf{Respon.} & \textbf{Amministr.} & \textbf{Analista} & \textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} & \textbf{Totale}\\
+    \hline
+    Erica & & TBD & & & & & 0(+3)\\
+    \hline
+    Francesco & & & TBD & & & & 0(+3)\\
+    \hline
+    Lorenzo & & TDB & & & & & 0(+3)\\
+    \hline
+    Matteo & TDB & & & & & & 0(+5)\\
+    \hline
+    Nicolas & & & & & & TDB & 0(+4.30)\\
+    \hline
+    Romina & & & TDB & & & & 0(+3)\\
+    \hline
+    \textbf{Totale} & 0(+5) & 0(+7.30) & 0(+6) & 0(+0) & 0(+0) & 0(+3) & 0(+21.30)\\
+    \hline
+\end{tabular}\\[8pt]
 
 
 \newpage
