--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -22,7 +22,7 @@ Questo documento serve a tracciare l'efficienza del progetto. Tiene traccia dei 
 \addversione{0.0.1}{22/04/2023}{Erica Cavaliere}{Alberti Nicolas}{Stesura iniziale}
 \addversione{0.0.2}{24/04/2023}{Erica Cavaliere}{Soldà Matteo}{Correzione errori e aggiunta delle intestazioni e dei piè di pagina}
 \addversione{0.0.3}{26/04/2023}{Erica Cavaliere}{Brotto Romina}{Inserimento interruzioni di pagina e completamento grafico di Gantt}
-\addversione{0.0.4}{11/05/2023}{Erica Cavaliere}{ }{Inserimento degli sprint e aggiornamento dei grafici di Gantt}
+\addversione{0.0.4}{11/05/2023}{Erica Cavaliere}{Lorenzo Salami}{Inserimento degli sprint e aggiornamento dei grafici di Gantt}
 
 \def\pgfcalendarmonthitname#1{%
 \ifcase#1 \or Gennaio\or Febbraio\or Marzo\or Aprile\or Maggio\or Giugno\or Luglio\or Agosto\or Settembre\or Ottobre\or Novembre\or Dicembre\fi%
@@ -121,19 +121,19 @@ Durante lo svolgimento del progetto, è possibile andare incontro a dei problemi
     \hline
     \textbf{ORE} & \textbf{Respon.} & \textbf{Amministr.} & \textbf{Analista} & \textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} & \textbf{Totale}\\
     \hline
-    Erica & & & 2 & & & & 2(+1)\\
+    Erica & & & 2 & & & & 3(+2)\\
     \hline
-    Francesco & & & 2 & & & & 2(+1)\\
+    Francesco & & & 2 & & & & 3(+2)\\
     \hline
-    Lorenzo & & & & & & 2 & 2(+1)\\
+    Lorenzo & & & & & & 2 & 3(+2)\\
     \hline
-    Matteo & & 3 & & & & & 3(+2)\\
+    Matteo & & 3 & & & & & 5(+3)\\
     \hline
-    Nicolas & 3 & & & & & & 3(+1.30)\\
+    Nicolas & 3 & & & & & & 4.30(+3)\\
     \hline
-    Romina & & 2 & & & & & 2(+1)\\
+    Romina & & 2 & & & & & 3(+2)\\
     \hline
-    \textbf{Totale} & 3(+2) & 5(+2.30) & 4(+2) & 0(+0) & 0(+0) & 2(+1) & 14(+7.30)\\
+    \textbf{Totale} & 5(+3) & 7.30(+5) & 6(+4) & 0(+0) & 0(+0) & 3(+2) & 21.30(+14)\\
     \hline
 \end{tabular}\\[8pt]
 
@@ -159,19 +159,19 @@ Durante lo svolgimento del progetto, è possibile andare incontro a dei problemi
     \hline
     \textbf{ORE} & \textbf{Respon.} & \textbf{Amministr.} & \textbf{Analista} & \textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} & \textbf{Totale}\\
     \hline
-    Erica & & TBD & & & & & 0(+3)\\
+    Erica & & 2 & & & & & 5(+2)\\
     \hline
-    Francesco & & & TBD & & & & 0(+3)\\
+    Francesco & & & 2 & & & & 5(+2)\\
     \hline
-    Lorenzo & & TDB & & & & & 0(+3)\\
+    Lorenzo & & 2 & & & & & 5(+2)\\
     \hline
-    Matteo & TDB & & & & & & 0(+5)\\
+    Matteo & 2 & & & & & & 7(+2)\\
     \hline
-    Nicolas & & & & & & TDB & 0(+4.30)\\
+    Nicolas & & & & & & 2 & 6.30(+2)\\
     \hline
-    Romina & & & TDB & & & & 0(+3)\\
+    Romina & & & 2 & & & & 5(+2)\\
     \hline
-    \textbf{Totale} & 0(+5) & 0(+7.30) & 0(+6) & 0(+0) & 0(+0) & 0(+3) & 0(+21.30)\\
+    \textbf{Totale} & 7(+2) & 11.30(+4) & 10(+4) & 0(+0) & 0(+0) & 5(+2) & 33.30(+12)\\
     \hline
 \end{tabular}\\[8pt]
 
