Aggiunto sprint 3 - #19 close

--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -58,7 +58,7 @@ Durante lo svolgimento del progetto, è possibile andare incontro a dei problemi
     \item Way of Working\newline
     \includegraphics[scale=0.24]{WoW_2.png}\newline
     \item Requirements and Technology Baseline\newline
-    \includegraphics[scale=0.24]{RTB_2.png}\newline
+    \includegraphics[scale=0.24]{RTB_3.png}\newline
 \end{itemize}
 
 \subsection{Scrum}\label{Scrum}
@@ -69,13 +69,13 @@ Durante lo svolgimento del progetto, è possibile andare incontro a dei problemi
 \newline
 \textbf{Suddivisione del lavoro:}
 \begin{itemize}
-    \item Aggiornamento delle norme di progetto;
-    \item Stesura del piano di progetto;
-    \item Stesura del piano di qualifica.
+    \item aggiornamento delle norme di progetto;
+    \item stesura del piano di progetto;
+    \item stesura del piano di qualifica.
 \end{itemize}
 \textbf{Difficoltà incontrate:}
 \begin{itemize}
-    \item Problemi a suddividere i ruoli e assegnare i compiti.
+    \item problemi a suddividere i ruoli e assegnare i compiti.
 \end{itemize}
 \includegraphics[scale=0.24]{WoW_1.png}\newline
 \newline
@@ -105,15 +105,15 @@ Durante lo svolgimento del progetto, è possibile andare incontro a dei problemi
 \newline
 \textbf{Suddivisione del lavoro:}
 \begin{itemize}
-    \item Aggiornamento delle Norme di Progetto inserendo la gestione dei processi e il ticketing;
-    \item Creare una prima stesura dell'Analisi dei Requisiti;
-    \item Preparare una base delle Use Case da inserire nell'Analisi dei Requisiti;
-    \item Stesura di un Glossario.
+    \item aggiornamento delle Norme di Progetto inserendo la gestione dei processi e il ticketing;
+    \item creare una prima stesura dell'Analisi dei Requisiti;
+    \item preparare una base delle Use Case da inserire nell'Analisi dei Requisiti;
+    \item stesura di un Glossario.
 \end{itemize}
 \textbf{Difficoltà incontrate:}
 \begin{itemize}
-    \item Iniziale difficoltà di organizzazione del lavoro;
-    \item Difficoltà nell'interpretazione di alcuni termini  del capitolato.
+    \item iniziale difficoltà di organizzazione del lavoro;
+    \item difficoltà nell'interpretazione di alcuni termini  del capitolato.
 \end{itemize}
 \includegraphics[scale=0.24]{RTB_1.png}\newline
 \newline
@@ -139,19 +139,19 @@ Durante lo svolgimento del progetto, è possibile andare incontro a dei problemi
 
 \subsubsection{Sprint 3}
 \textbf{Data di inizio:} 09/05/2023\newline
-\textbf{Data di fine:} 19/05/2023\newline
+\textbf{Data di fine:} 16/05/2023\newline
 \newline
 \textbf{Suddivisione del lavoro:}
 \begin{itemize}
-    \item Aggiornamento dell'Analisi dei Requisiti inserendo vincoli, riferimenti normativi, riferimenti informativi e una tabella dei requisiti;
-    \item Aggiornamento delle Norme di Progetto inserendo una sequenza chiara per la gestione dei commit;
-    \item Fare uno confronto dei possibili linguaggi che si andranno poi ad utilizzare nel progetto.
+    \item aggiornamento dell'Analisi dei Requisiti inserendo vincoli, riferimenti normativi, riferimenti informativi e una tabella dei requisiti;
+    \item aggiornamento delle Norme di Progetto inserendo una sequenza chiara per la gestione dei commit;
+    \item fare uno confronto dei possibili linguaggi che si andranno poi ad utilizzare nel progetto.
 \end{itemize}
 \textbf{Difficoltà incontrate:}
 \begin{itemize}
-    \item Gestione della repository;
-    \item Scarsa conoscenza dei comandi nel VCS;
-    \item Difficoltà nella scelta dei linguaggi framework data la poca esperienza accomulata e la grande presenza di alternative.
+    \item gestione della repository;
+    \item scarsa conoscenza dei comandi nel VCS;
+    \item difficoltà nella scelta dei linguaggi framework data la poca esperienza accomulata e la grande presenza di alternative.
 \end{itemize}
 \includegraphics[scale=0.24]{RTB_2.png}\newline
 \newline
@@ -175,6 +175,40 @@ Durante lo svolgimento del progetto, è possibile andare incontro a dei problemi
     \hline
 \end{tabular}\\[8pt]
 
+\subsubsection{Sprint 3}
+\textbf{Data di inizio:} 17/05/2023\newline
+\textbf{Data di fine:} 25/05/2023\newline
+\newline
+\textbf{Suddivisione del lavoro:}
+\begin{itemize}
+    \item incontro con il proponente per sistemare gli use case;
+    \item decidere i linguaggi e i framework da utilizzare.
+\end{itemize}
+\textbf{Difficoltà incontrate:}
+\begin{itemize}
+    \item (da definire)
+\end{itemize}
+\includegraphics[scale=0.24]{RTB_3.png}\newline
+\newline
+\begin{tabular}{|c|c|c|c|c|c|c|c|}
+    \hline
+    \textbf{ORE} & \textbf{Respon.} & \textbf{Amministr.} & \textbf{Analista} & \textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} & \textbf{Totale}\\
+    \hline
+    Erica & & 0 & & & & & 0(+0)\\
+    \hline
+    Francesco & & & & & & 0 & 0(+0)\\
+    \hline
+    Lorenzo & & 0 & & & & & 0(+0)\\
+    \hline
+    Matteo & & & 0 & & & & 0(+0)\\
+    \hline
+    Nicolas & & & 0 & & & & 0(+0)\\
+    \hline
+    Romina & 0 & & & & & & 0(+0)\\
+    \hline
+    \textbf{Totale} & 0(+0) & 0(+) & 0(+0) & 0(+0) & 0(+0) & 0(+0) & 0(+0)\\
+    \hline
+\end{tabular}\\[8pt]
 
 \newpage
 
